refactor: Routes API field mask를 properties로 이동
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>